# changelog-confluence

./: README.md  changelog-confluence.py  confluence.py  requirements.txt  setup.cfg
changelog/: changelog_confluence.py
