[metadata]
name = changelog-confluence
version = 1.0.0
description = Script to publish a document to Confluence.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Bartman0/changelog-confluence
author = Richard Kooijman
author_email = kooijman.richard@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    changelog-confluence = changelog.changelog_confluence:main

[bdist_wheel]
universal = True
